--- a/applications/primo/styles-imports/_advanced-search-tile.scss
+++ b/applications/primo/styles-imports/_advanced-search-tile.scss
@@ -1,10 +1,10 @@
 // advanced search
 #exlidAdvancedSearchTile {
 
-  border-color: #fff;
+  border-color: transparent;
   background-image: none;
   background: none;
-
+  display: inline-block;
 
   #exlidAdvancedSearchRibbon {
 
